--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^17.0.15",
+    "axios": "^0.25.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
