--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.0.1",
     "@types/node": "^17.0.15",
+    "ant-design-vue": "^2.2.8",
     "axios": "^0.25.0",
+    "unplugin-vue-components": "^0.17.16",
     "vue": "^3.2.25"
   },
   "devDependencies": {
